<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/solution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Numbers"
        android:text="@string/Solution"
        android:textColor="@color/black"
        android:textSize="100sp" />

    <TextView
        android:id="@+id/Numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonContainer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/Numbers"
        android:textColor="@color/black"
        android:textSize="100sp" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5D5D5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_1"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_2"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_3"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_div"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="#3EAA10"
                android:text="@string/division"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5D5D5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_4"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_5"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_6"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_mult"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="#3EAA10"
                android:text="@string/x"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5D5D5"
            android:gravity="center"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_7"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_7"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_8"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_9"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_menos"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="#3EAA10"
                android:text="@string/menos"
                android:textSize="25sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D5D5D5"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_D"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/del"
                android:textSize="25sp"
                android:backgroundTint="#C83255"
                />


            <Button
                android:id="@+id/button_0"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:text="@string/_0"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_igual"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="#3EAA10"
                android:text="@string/igual"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_mas"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="10dp"
                android:backgroundTint="#3EAA10"
                android:text="@string/mas"
                android:textSize="25sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>